# forever

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  TODO.md  docker-compose.yml  forever.json5  package-lock.json  package.json  publish.html  tsconfig.json  vitest.config.ts
backend/: .env.example  main.ts  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: files.py  git.py  plugins.py
backend/app/core/: context.py  file_organizer.py  git_manager.py  llm.py
backend/app/models/: __init__.py  file.py  operation.py  project.py
backend/app/plugins/: __init__.py  hookspecs.py  manager.py
backend/app/utils/: logger.py  validator.py
backend/core/: config.ts  errors.ts  event-bus.ts  health.ts  index.ts  logger.ts  pipeline.ts  rate-limiter.ts  security.ts
backend/core/agent/: auto-reply-pipeline.ts  graph.ts  index.ts  model-manager.ts  nodes.ts  routing.ts  skills.ts  state.ts  subagents.ts  task-flow.ts  tool-approval.ts
backend/examples/: agent-complete-example.ts  quickstart-demo.ts
backend/memory/: archival-memory.ts  core-memory.ts  index.ts  memory-extractor.ts  memory-reflection.ts  memory-tools.ts  memory-types.ts  recall-memory.ts  tiered-memory.ts  time-aware-memory.ts
backend/services/: tts.interface.ts
backend/session/: character-manager.ts  index.ts  session-store.ts
backend/tests/: test_file_organizer.py  test_git.py  test_llm.py  test_plugins.py
tests/: run-all.ts  (+8 more)
(+246 files in other folders)
